# Rendering-Engine-Framework

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: test-build.yml
cmake/: ConfigureVulkan.cmake  Utils.cmake
ref/: CMakeLists.txt  Core.h  main.cpp
ref-demos/: CMakeLists.txt  DemoApplicationStates.cpp  DemoApplicationStates.h  main.cpp
ref-demos/Shaders/: color.frag  gradient.comp  gradient.glsl  mvp.vert  particleDraw.comp  pos.vert  posColor.vert
ref/Core/: Core.h  Serialization.h  UserInterface.cpp  UserInterface.h  Window.cpp  Window.h
ref/Vulkan/: Application.cpp  Application.h  ApplicationBuilder.cpp  ApplicationBuilder.h  ApplicationState.cpp  ApplicationState.h  Features.cpp  Features.h  Swapchain.cpp  Swapchain.h
ref/Vulkan/Renderer/: DescriptorSet.cpp  DescriptorSet.h  FrameGraph.cpp  FrameGraph.h  FrameGraphBuilder.cpp  FrameGraphBuilder.h  PipelineLibrary.cpp  PipelineLibrary.h  RenderPass.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  ShaderLibrary.cpp  ShaderLibrary.h
